--- a/_posts/2015-06-30-week-26.markdown
+++ b/_posts/2015-06-30-week-26.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Week 26"
 date:   2015-06-30
-categories: Clojure
+tags:   [braindump]
 ---
 
 Some random things I've been thinking about this week:
