--- a/content/posts/2015-06-30-week-26.markdown
+++ b/content/posts/2015-06-30-week-26.markdown
@@ -11,9 +11,9 @@ Some random things I've been thinking about this week:
 
 The first thing that comes into my mind when I hear "category theory" is the basic stuff we 
 learned about at university, such as the set union operation. It turns out that category 
-theory is much more than that - we can also reason about the functions and types that make up 
+theory is much more than that — we can also reason about the functions and types that make up 
 a software application using category theory. I don't really grasp it yet, but I will try 
-to dive into it a bit more - and maybe pick up some Haskell along the way.
+to dive into it a bit more and maybe pick up some Haskell along the way.
 
 * Bartosz Milewski has a really nice article series called [Category Theory for Programmers](http://bartoszmilewski.com/2014/10/28/category-theory-for-programmers-the-preface/).
 * For Clojure, there is the [cats library](https://github.com/funcool/cats).
@@ -50,7 +50,7 @@ dropping buffer.
 
 I've finally gotten around the reading Leonard Richardson's and Mike Amundsen's book 
 [RESTful Web APIs](http://www.restfulwebapis.org/). It's making me realise all the 
-mistakes I've made designing APIs in the past - I'm definitely guilty of forcing API
+mistakes I've made designing APIs in the past — I'm definitely guilty of forcing API
 consumers to read the documentation instead of following the [HATEOAS pattern](https://en.wikipedia.org/wiki/HATEOAS). 
 
 It's also made me think again about the different data formats REST APIs normally
