--- a/content/posts/2015-02-08-duct.markdown
+++ b/content/posts/2015-02-08-duct.markdown
@@ -1,9 +1,9 @@
 ---
-title:  "Taking duct for a spin"
-date:   2015-02-08
-tags:   [clojure, microservices]
-uuid:   61f7d274-aee4-40f2-a269-3a0656bc2764
-author: Johannes Staffans
+title:          "Taking duct for a spin"
+date-published: 2015-02-08
+tags:           [clojure, microservices]
+uuid:           61f7d274-aee4-40f2-a269-3a0656bc2764
+author:         Johannes Staffans
 ---
 
 I have been meaning to try building a simple web application using Stuart Sierra's [Component](https://github.com/stuartsierra/component) library for a while now. If you haven't heard about it, it's definitely worth having a look at - it is a lovely way of organising the different components that go into an application and gives you a smooth workflow in the REPL.
